little fix project file

--- a/src/RutrackerImport/RutrackerImport.csproj
+++ b/src/RutrackerImport/RutrackerImport.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <None Update="ConnectionStrings.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
